--- a/src/components/error/error.module.scss
+++ b/src/components/error/error.module.scss
@@ -1,5 +1,5 @@
 .errorContainer {
-    position: absolute;
+    position: fixed;
     top: 68px;
     height: auto;
     z-index: 5;
@@ -18,12 +18,13 @@
 
     @media screen and (min-width: 768px) {
         align-items: center;
-        top: 68px;
+        top: 62px;
         width: 640px;
         padding: 24px 12px;
     }
 
     @media screen and (min-width: 1440px) {
+        top: 64px;
         width: 1110px;
         padding: 24px 32px;
     }
