--- a/src/pages/book/book-page.module.scss
+++ b/src/pages/book/book-page.module.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     margin: 0 auto;
     width: 100%;
-    justify-content: center;
     flex: 1 1 auto;
 }
 
@@ -79,4 +78,18 @@
     @media screen and (min-width: 768px) {
         margin-top: 36px;
     }
+}
+
+.noRating {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.1px;
+    text-align: left;
+    color: #A7A7A7;
+}
+
+.errorContainer {
+    display: flex;
+    justify-content: center;
 }
