Add search book

--- a/src/components/search-input/search-input.module.scss
+++ b/src/components/search-input/search-input.module.scss
@@ -39,8 +39,15 @@
     }
 }
 
+.searchIconActive {
+    svg path {
+        fill: rgb(248, 54, 0);
+    }
+}
+
 .searchInput {
     display: none;
+    caret-color: rgb(248, 54, 0);
 
     @media screen and (min-width: 768px) {
         width: 100%;
