--- a/src/components/books-content/books-content.module.scss
+++ b/src/components/books-content/books-content.module.scss
@@ -7,6 +7,7 @@
 .gridContainer {
     display: flex;
     flex-wrap: wrap;
+
     @media screen and (min-width: 320px) {
         gap: 16px;
     }
@@ -18,4 +19,29 @@
     @media screen and (min-width: 1440px) {
         gap: 22px;
     }
+}
+
+.emptyResult {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: #A7A7A7;
+
+    @media screen and (min-width: 320px) {
+        font-size: 18px;
+        line-height: 28px;
+        text-align: center;
+    }
+}
+
+.emptyResultContainer {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    min-height: 100vh;
+    flex-wrap: wrap;
 }
