--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -13,7 +13,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    background: url("../../assets/icon/loaderIcon.png") no-repeat center;
+    background: url('../../assets/icon/loaderIcon.png') no-repeat center;
     border-radius: 50%;
     animation: rotation 0.8s linear infinite;
     width: 68.75px;
